Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-18100

[REG 4.2 -> 4.3] qbs: Project tree does not show "name" of qbs-project

    XMLWordPrintable

Details

    Description

      1. Open a qbs-based project.
      2. Show the "Projects" view.
        The project's root-node has the name of the project's qbs-file.
      3. In the qbs-file, add the line:
        name: "Bug demo"
        
      4. Save the qbs-file.
        Nothing happens.

      The project's root-node should be renamed to "Bug demo". In Creator 4.2, this used to work correctly.

      Found by Squish test tst_opencreator_qbs

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-18100
        # Subject Branch Project Status CR V

        Activity

          People

            hunger Tobias Hunger
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes